# fastfilters

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  format-code.sh  waf  wscript
benchmark/: bench_vigra.py  result_avx2.txt
fastfilters/: __init__.py
include/: common.h  fastfilters.h  fastfilters.hxx
include/fastfilters/: avx.hxx  config.hxx  opencv.hxx  vigra.hxx
pkg/conda/fastfilters/: bld.bat  build.sh  meta.yaml  run_test.sh
pkg/gentoo/sci-libs/fastfilters/: fastfilters-0.1.1.ebuild  fastfilters-0.2.2.ebuild  fastfilters-0.2.ebuild  fastfilters-9999.ebuild
src/: array.c  avx.cxx  avx_mathfun.h  bindings_python.cxx  common.h  config.h.in  convolve_fir.cxx  convolve_fir.hxx  convolve_fir_avx.cxx  convolve_fir_nosimd.cxx  convolve_iir.cxx  convolve_iir_avx.cxx  convolve_iir_deriche.cxx  cpu.c  cpu.cxx  cpuid.hxx  fastfilters.c  fastfilters.cxx  fir_convolve.c  fir_convolve_avx.c  fir_convolve_avx_common.h  fir_convolve_avx_impl.c  fir_convolve_nosimd.c  fir_convolve_nosimd_impl.h  fir_filters.c  fir_kernel.c  gaussians.hxx  kernel_fir.c  kernel_fir_gaussian.cxx  kernel_iir_deriche.cxx  linalg.c  linalg.cxx  linalg_avx.c  linalg_avx.cxx  linalg_avx2.c  memory.c  pybind.cxx  util.hxx  vector.hxx  xgetbv.hxx
src/python/: __init__.py  core.cxx
src/python_core/: bindings_python.cxx
src/python_fastfilters/: __init__.py
tests/: CMakeLists.txt  border_bug.py  cpufeatures.cxx  gaussian.cxx  iir.cxx  iir_single.cxx  iir_single_avx.cxx  opencv.cxx  roi.py  set_paths.py.in  test_border_bug.py  test_vigra_compare.py  test_vigra_compare3d.py  test_vigra_compare_rgb.py  vigra.cxx  vigra_compare.py  vigra_compare3d.py  vigra_compare_rgb.py
waftools/: cpufeatures.py  run_py_script.py
